# child-safety-monitor

./: .gitignore  README.md
UI/: accounts.json  host_server.py
yolo/: CMakeLists.txt  stereo_calib.yaml
yolo/include/: behavior_analyzer.h  danger_monitor.h  image_convert.h  network_sender.h  postprocess_pose.h  postprocess_seg.h  stereo_camera.h  sys_monitor.h  yolov8_pose.h  yolov8_seg.h
yolo/model/: yolov8_seg_labels_list.txt
yolo/src/: behavior_analyzer.cc  danger_monitor.cc  main.cc  network_sender.cc  postprocess_pose.cc  postprocess_seg.cc  stereo_camera.cc  sys_monitor.cc  yolov8_pose.cc  yolov8_seg.cc
yolo/utils/: CMakeLists.txt  image_utils.c
